添加关于前端的资源

--- a/fort_end/js_jq/j08_a03_制作论坛发贴/css/bbs.css
+++ b/fort_end/js_jq/j08_a03_制作论坛发贴/css/bbs.css
@@ -81,4 +81,8 @@ header span {
     border-radius: 8px;
     cursor: pointer;
 }
-
+.bbs section ul li {
+    padding: 10px 0;
+    border-bottom: 1px #999999 dashed;
+    /*overflow: hidden;*/
+}
